Alignment fixes

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,22 +1,28 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600);
 
-h1.text {
+header > h1 {
   text-align: center;
   font-weight: normal;
   font-size: 48pt;
+  position: auto;
   width: auto;
-  margin: auto 0;
+  margin: auto;
   padding: 50px;
 }
 
 body, .text {
   transition: 0.25s;
   font-family: 'Open Sans', sans-serif;
-  border: none;
 }
 
 div.container {
   border: none;
+  position:absolute;
+  top:0; bottom: 150px; left: 0; right: 0;
+  margin: auto;
+  padding:15px;
+  text-align: center;
+  height: 300px;
 }
 
 form {
@@ -30,12 +36,14 @@ input.text {
   text-align: center;
   font-size: 32pt;
   background-color: rgba(0,0,0,0);
+  margin-top: -15px;
 }
 
 label.text {
   font-size: 34pt;
   font-weight: normal;
   display: inline-block;
+  text-align: center;
 }
 
 input.text:focus {
@@ -43,34 +51,13 @@ input.text:focus {
 }
 
 div.inputgroup {
-  margin-bottom: 50px;
-  max-width:4vw;
   text-align: center;
 }
 
 @media screen and (max-device-width:768px) {
   div.container {
-    position: relative;
-    display: inline block;
-    top: inherit;
-    border: none;
-}
-
-@media screen and (min-device-width:768px) {
-  div.container {
-    display: none;
-    position:absolute;
-    top:43%;
-    left:50%;
-    padding:15px;
-    -ms-transform: translateX(-50%) translateY(-50%);
-    -webkit-transform: translate(-50%,-50%);
-    transform: translate(-50%,-50%);
-    text-align: center;
-  }
-
-  input.text {
-    margin-top: -15px;
-    text-align: center;
+    position:auto;
+    display: auto;
+    top: 75%;
   }
 }
